docs: Added basic README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "metric-collector"
 version = "0.1.0"
-description = "Add your description here"
+description = "Simple k8s CPU/RAM collector"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
